# pico-i2c-slave-debugging

./: CMakeLists.txt  README.md  flake.nix
first-board/: CMakeLists.txt  main.c
second-board/: CMakeLists.txt  main.c
shared/communication/: CMakeLists.txt  communication.c  communication.h
